[package]
name = "telegram-tracker"
version = "0.1.1"
authors = ["Felix <felix.g.borrego@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
telegram-client = "1.6.3"
#rtdlib = "1.6.3" # must be same as compiled
rtdlib = { version = "=1.6.5", features = [ "sys" ] }

log = "0.4"
simple_logger = "1.3"
toolkit = "0.1"
colored = "1.9"
regex = "1"
clap = "3.0.0-beta.2"
chrono = "0.4"
