[package]
name = "telegram-tracker"
version = "0.1.5"
authors = ["Felix <felix.g.borrego@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
telegram-client = { version="1.7.0"}
rtdlib = { version = "=1.7.0", features = [ "sys" ] }
log = "0.4"
simple_logger = "1.3"
toolkit = "0.1"
colored = "1.9"
regex = "1"
clap = "3.0.0-beta.2"
chrono = "0.4"
futures = "0.3"